2010-05-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/condest.R (onenormest, condest): allow to estimate condition
	number for large sparse matrices.
	* condest.Rd: docu

	* R/pMatrix.R (.inv.perm): utility; add [t]crossprod() methods

	* man/sparseLU-class.Rd: A = P'LUQ; add examples, with "identities"

	* R/Auxiliaries.R (mmultCheck): new arg. 'kind'

2010-04-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-39, CRAN-released: 2010-.....

	* R/spModels.R (fac2sparse): using names(formals(new))[[1]] to
	adapt to a future change in new()'s first argument *name*.

2010-03-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (lm.fit.sparse): update, allowing weights; also
	return residuals, notably for "cholesky" case.

	* man/lm.fit.sparse.Rd: examples; comparing with dense case.

	* src/dgCMatrix.c (dgCMatrix_cholsol): comments; also compute
	residuals.

2010-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (sparse.model.matrix, model.spmatrix): border case
	'~ 1' should also work.  Add  'transpose = FALSE' argument.

	* tests/spModel.matrix.R: test that.

2010-03-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (printSpMatrix): ensure returning original argument

2010-03-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (coercion from TsparseMatrix): diagU2N() when
	needed.

	* inst/test-tools.R (checkMatrix): explicit which() test for
	"l" and "nMatrix".  New sparseVector (coercion "and back") check.

2010-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lMatrix.R (which): define methods for which(<[ln]Matrix>).

	* inst/test-tools.R (Q.eq.symmpart): new utility, now called in
	 checkMatrix().

	* R/nearPD.R: use symmpart() for non-symmetric x
	* man/nearPD.Rd: improve title

2010-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/colSums.R (.diag.Mean): define methods for "diagonalMatrix"
